tests/NormalTests/paczka1/fuzzy1/43745974.err
Error in line 1: WSA9tW S324 76,4
Error in line 16: 7VQ2bch S974 331,6
Error in line 23: 7VQ2bch S324 25,3
Error in line 34: WSA9tW S324 89,1
